--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="pull-right">
                     <a class="btn btn-cta-primary" href="mailto:rishcortez29@gmail.com" target="_blank" title="Mail to rishcortez29@gmail.com"><i class="fa fa-paper-plane"></i> Mail</a>&nbsp;
                     <a class="btn btn-info" href="https://m.me/irish.cortez.5" target="_blank"  title="Contact Irish Cortez using Messenger"><i class="fab fa-facebook-messenger"></i> CHAT</a>
-                    <a class="btn btn-info" href="www.facebook.com/irish.cortez.5" target="_blank"  title="Facebook profile of Irish Cortez"><i class="fab fa-facebook-f"></i> VISIT</a>
+                    <a class="btn btn-info" href="https://facebook.com/irish.cortez.5" target="_blank"  title="Facebook profile of Irish Cortez"><i class="fab fa-facebook-f"></i> VISIT</a>
                 </div>
 
             </div>
